--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="https://d3js.org/d3.v4.js"></script>
 
 <!-- Create a div where the graph will take place -->
-<h1>GRAPH 2 !!!!!!!!!!!!!</h1>
+<h1 href = "\index-1.html">GRAPH 2 !!!!!!!!!!!!!</h1>
 <div id="my_dataviz"></div>
 <div id="legend"></div> 
 <script>
