--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <script src="https://d3js.org/d3.v4.js"></script>
 
 <!-- Create a div where the graph will take place -->
-<h1 href = "\index-1.html">GRAPH 2 !!!!!!!!!!!!!</h1>
+<h1 href = "/index-1.html">GRAPH 2 !!!!!!!!!!!!!</h1>
+<a href =  "index-1.html">next graph</a>
+<a href =  "/index-1.html">next graph</a>
 <div id="my_dataviz"></div>
 <div id="legend"></div> 
 <script>
