--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       <div> 
         <a class="graph" href = "/graph1.html">graph1</a>
         <a class="graph" href = "/graph2.html">graph2</a>
-        <a class="graph" href = "/original-g1.html">original graph1</a>
-        <a class="graph" href = "/originalg2.html">original graph2</a>
+        <a class="graph" href = "/original_g1.html">original graph1</a>
+        <a class="graph" href = "/original_g2.html">original graph2</a>
       </div>
     <main>
     <footer class="footer">
