--- a/original_g2.html
+++ b/original_g2.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset="utf-8">
 <body>
-<h1>GRAPH !!!!!!!</h1>
+<h1>GRAPH 2!!!!!!!</h1>
 <div id="my_dataviz"></div>
 <div id="legend"></div>
 <!-- load the d3.js library -->    	
