--- a/graph1.html
+++ b/graph1.html
@@ -25,7 +25,7 @@
               "translate(" + margin.left + "," + margin.top + ")");
     
     // Parse the Data
-    d3.csv("job-vacancy-rate-by-broad-occupational-group", function(data) {
+    d3.csv("job-vacancy-rate-by-broad-occupational-group.csv", function(data) {
     
       // List of subgroups = header of the csv files = soil condition here
       var subgroups = d3.map(data, function(d){return(d.occupation1)}).keys()
@@ -53,7 +53,7 @@ svg.append("text")
 
 // Add Y axis
 var y = d3.scaleLinear()
-  .domain([0, 3500000])
+  .domain([0, 7])
   .range([ height, 0 ]);
 svg.append("g")
   .call(d3.axisLeft(y));   
